--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -66,3 +66,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .small {
+    display: none;
+  }
+}
