--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -2,17 +2,20 @@
 }
 
 .main-grid {
-  overflow:hidden;
   display: grid;
+  overflow: hidden;
   grid-template-columns: 20% 80%;
+}
+.main-grid::has(.ml-auto) {
+  overflow: auto;
 }
 
 .link-main {
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .link-main:hover {
-  color:#334abd;
+  color: #334abd;
 }
 @media only screen and (max-width: 700px) {
   .link-main {
